[metadata]
name = previsionio
version = 11.0.0
license_file = LICENSE
license_files =  LICENSES/*
author = prevision.io
author_email = prevision@prevision.io
description = python wrapper for prevision api
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/previsionio/prevision-python
project_urls =
    Bug Tracker = https://github.com/previsionio/prevision-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src