[metadata]
name = previsionio
version = 11.0.0
license = MIT License
license_file = LICENSE
license_files =  LICENSES/*
author = prevision.io
author_email = team-core@prevision.io
description = python wrapper for prevision api
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/previsionio/prevision-python
project_urls =
    Bug Tracker = https://github.com/previsionio/prevision-python/issues
    Documentation = https://prevision-python.readthedocs.io/en/latest/
    Source Code = https://github.com/previsionio/prevision-python
classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = previsionio

[versioneer]
VCS = git
style = pep440
versionfile_source = previsionio/_version.py
versionfile_build = previsionio/_version.py
tag_prefix =
parentdir_prefix = previsionio-